syntax = "proto3";

package rivet.backend.pkg.captcha.hcaptcha_verify;

import "resources/legacy/proto/common.proto";

message Request {
	string client_response = 1;
	string remote_address = 3;
	string site_key = 2;
	optional string secret_key = 4;
}

message Response {
	bool success = 1;
}
